# ms2rescore-rs

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
src/: file_types.rs  lib.rs  ms2_spectrum.rs  parse_mzdata.rs  parse_timsrust.rs  precursor.rs
tests/: test.py  test_lib.py
tests/data/: README.md  test.mgf  test.mzML
