[package]
name = "ms2rescore-rs"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ms2rescore_rs"
crate-type = ["cdylib"]

[features]
default = ["thermorawfilereader"]

thermorawfilereader = ["mzdata/thermo"]

[dependencies]
pyo3 = "0.20.0"
mzdata = {git = "https://github.com/paretje/mzdata.git", branch = "feature/pub-use"}
timsrust = "0.3.0"
