[package]
name = "ms2rescore-rs"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ms2rescore_rs"
crate-type = ["cdylib"]

[features]
default = ["thermo"]

thermo = ["mzdata/thermo"]

[dependencies]
pyo3 = "0.20.0"
mzdata = "0.33.0"
timsrust = "0.3.0"
