[package]
name = "ms2rescore-rs"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ms2rescore_rs"
crate-type = ["cdylib"]

[features]
default = ["thermo"]
thermo = ["mzdata/thermo"]

[dependencies]
mzdata = "0.39.0"
timsrust = "0.3.0"

[dependencies.pyo3]
version = "0.23.3"
features = ["anyhow"]
